--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@ $password = sha1(mysql_real_escape_string($_POST['password']));
          AND password = '$password'
          ") or die (mysql_error());
  //echo mysql_fetch_array($query);
+ $total = mysql_num_rows($query);
+ If($total > 0){
+     //login
+     session_start();
+     $_SESSION['nom_usu']= 'blah';
+     header('location:dashboard.php');
+ }
+ else
+ {
+     //do nothing
+     echo nada;
+ }
  echo mysql_num_rows($query);
 }
  ?>
